--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.11.2",
     "aos": "^2.3.4",
     "express": "^5.2.1",
+    "formik": "^2.4.9",
     "mongoose": "^8.21.0",
     "normalize.css": "^8.0.1",
     "react": "^19.2.0",
