--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "aos": "^2.3.4",
     "express": "^5.2.1",
     "formik": "^2.4.9",
+    "leaflet": "^1.9.4",
     "mongoose": "^8.21.0",
     "normalize.css": "^8.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "redux": "^5.0.1",
