--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
     "aos": "^2.3.4",
+    "axios": "^1.13.2",
     "express": "^5.2.1",
     "formik": "^2.4.9",
     "leaflet": "^1.9.4",
