--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
+    "react-loader-spinner": "^8.0.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "redux": "^5.0.1",
